Computing Lab 2/assignment4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COUNTRY
    LDATE
    RDATE

Grammar

Rule 0     S' -> Start
Rule 1     Start -> S1
Rule 2     Start -> S2
Rule 3     Start -> S3
Rule 4     Start -> S4
Rule 5     Start -> S5
Rule 6     Start -> S6
Rule 7     Start -> S7
Rule 8     Start -> S8
Rule 9     Start -> S9
Rule 10    Start -> S10
Rule 11    Start -> S11
Rule 12    Start -> S12
Rule 13    Start -> S13
Rule 14    S1 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 15    S2 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 16    S3 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 17    S4 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 18    S5 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 19    S6 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 20    S7 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 21    S8 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 22    S9 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 23    S10 -> TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
Rule 24    S11 -> TR_WORLD TD_NULL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE
Rule 25    S12 -> TR_CONTINENT TD_NULL TD_CLOSE TD_OPEN NOBR ALL NOBR_CLOSE TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE
Rule 26    S13 -> NEWCASEDATE ALL NEWCASEDATA ALL NEWCASECLOSE

Terminals, with rules where they appear

ALL                  : 14 14 14 14 14 14 14 14 14 14 14 14 14 15 15 15 15 15 15 15 15 15 15 15 15 16 16 16 16 16 16 16 16 16 16 16 17 17 17 17 17 17 17 17 17 17 18 18 18 18 18 18 18 18 18 19 19 19 19 19 19 19 19 19 19 19 20 20 20 20 20 20 20 20 20 20 20 20 21 21 21 21 21 21 21 21 21 21 21 21 22 22 22 22 22 22 22 22 22 22 22 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 26 26
ANCHOR               : 14 15 16 17 18 19 20 21 22 23
COUNTRY              : 
LDATE                : 
LINK                 : 14 15 16 17 18 19 20 21 22 23
NEWCASECLOSE         : 26
NEWCASEDATA          : 26
NEWCASEDATE          : 26
NOBR                 : 25
NOBR_CLOSE           : 25
RDATE                : 
TD_CLOSE             : 14 14 14 14 14 14 14 14 14 14 14 14 14 15 15 15 15 15 15 15 15 15 15 15 15 15 16 16 16 16 16 16 16 16 16 16 16 16 16 17 17 17 17 17 17 17 17 17 17 17 17 17 18 18 18 18 18 18 18 18 18 18 18 18 18 19 19 19 19 19 19 19 19 19 19 19 19 19 20 20 20 20 20 20 20 20 20 20 20 20 20 21 21 21 21 21 21 21 21 21 21 21 21 21 22 22 22 22 22 22 22 22 22 22 22 22 22 23 23 23 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 25
TD_NULL              : 24 24 24 24 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25
TD_OPEN              : 14 14 14 14 14 14 14 14 14 14 14 14 14 15 15 15 15 15 15 15 15 15 15 15 15 15 16 16 16 16 16 16 16 16 16 16 16 16 16 17 17 17 17 17 17 17 17 17 17 17 17 17 18 18 18 18 18 18 18 18 18 18 18 18 18 19 19 19 19 19 19 19 19 19 19 19 19 19 20 20 20 20 20 20 20 20 20 20 20 20 20 21 21 21 21 21 21 21 21 21 21 21 21 21 22 22 22 22 22 22 22 22 22 22 22 22 22 23 23 23 23 23 23 23 23 23 23 23 23 23 24 25
TR_CONTINENT         : 25
TR_WORLD             : 24
error                : 

Nonterminals, with rules where they appear

S1                   : 1
S10                  : 10
S11                  : 11
S12                  : 12
S13                  : 13
S2                   : 2
S3                   : 3
S4                   : 4
S5                   : 5
S6                   : 6
S7                   : 7
S8                   : 8
S9                   : 9
Start                : 0

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . S1
    (2) Start -> . S2
    (3) Start -> . S3
    (4) Start -> . S4
    (5) Start -> . S5
    (6) Start -> . S6
    (7) Start -> . S7
    (8) Start -> . S8
    (9) Start -> . S9
    (10) Start -> . S10
    (11) Start -> . S11
    (12) Start -> . S12
    (13) Start -> . S13
    (14) S1 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (15) S2 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (16) S3 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (17) S4 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (18) S5 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (19) S6 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (20) S7 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (21) S8 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (22) S9 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (23) S10 -> . TD_OPEN LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (24) S11 -> . TR_WORLD TD_NULL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE
    (25) S12 -> . TR_CONTINENT TD_NULL TD_CLOSE TD_OPEN NOBR ALL NOBR_CLOSE TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE
    (26) S13 -> . NEWCASEDATE ALL NEWCASEDATA ALL NEWCASECLOSE

    TD_OPEN         shift and go to state 15
    TR_WORLD        shift and go to state 16
    TR_CONTINENT    shift and go to state 17
    NEWCASEDATE     shift and go to state 18

    Start                          shift and go to state 1
    S1                             shift and go to state 2
    S2                             shift and go to state 3
    S3                             shift and go to state 4
    S4                             shift and go to state 5
    S5                             shift and go to state 6
    S6                             shift and go to state 7
    S7                             shift and go to state 8
    S8                             shift and go to state 9
    S9                             shift and go to state 10
    S10                            shift and go to state 11
    S11                            shift and go to state 12
    S12                            shift and go to state 13
    S13                            shift and go to state 14

state 1

    (0) S' -> Start .



state 2

    (1) Start -> S1 .

    $end            reduce using rule 1 (Start -> S1 .)


state 3

    (2) Start -> S2 .

    $end            reduce using rule 2 (Start -> S2 .)


state 4

    (3) Start -> S3 .

    $end            reduce using rule 3 (Start -> S3 .)


state 5

    (4) Start -> S4 .

    $end            reduce using rule 4 (Start -> S4 .)


state 6

    (5) Start -> S5 .

    $end            reduce using rule 5 (Start -> S5 .)


state 7

    (6) Start -> S6 .

    $end            reduce using rule 6 (Start -> S6 .)


state 8

    (7) Start -> S7 .

    $end            reduce using rule 7 (Start -> S7 .)


state 9

    (8) Start -> S8 .

    $end            reduce using rule 8 (Start -> S8 .)


state 10

    (9) Start -> S9 .

    $end            reduce using rule 9 (Start -> S9 .)


state 11

    (10) Start -> S10 .

    $end            reduce using rule 10 (Start -> S10 .)


state 12

    (11) Start -> S11 .

    $end            reduce using rule 11 (Start -> S11 .)


state 13

    (12) Start -> S12 .

    $end            reduce using rule 12 (Start -> S12 .)


state 14

    (13) Start -> S13 .

    $end            reduce using rule 13 (Start -> S13 .)


state 15

    (14) S1 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (15) S2 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (16) S3 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (17) S4 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (18) S5 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (19) S6 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (20) S7 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (21) S8 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (22) S9 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE
    (23) S10 -> TD_OPEN . LINK ALL ANCHOR TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_OPEN ALL TD_CLOSE

    LINK            shift and go to state 19


state 16

    (24) S11 -> TR_WORLD . TD_NULL TD_CLOSE TD_OPEN ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE

    TD_NULL         shift and go to state 20


state 17

    (25) S12 -> TR_CONTINENT . TD_NULL TD_CLOSE TD_OPEN NOBR ALL NOBR_CLOSE TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE TD_NULL ALL TD_CLOSE

    TD_NULL         shift and go to state 21


state 18

    (26) S13 -> NEWCASEDATE . ALL NEWCASEDATA ALL NEWCASECLOSE

    ALL             shift and go to state 22


state 19
